--- a/video-css-3/units.html
+++ b/video-css-3/units.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="units.html#pixels">Pixeles</a></li>
         <li><a href="units.html#ems">Ems</a></li>
+        <li><a href="units.html#rems">Rems</a></li>
     </ul>
     
     <h2 id="pixels">Pixeles</h2>
@@ -26,12 +27,23 @@
     <h2 id="ems">Ems</h2>
     <div class="ems">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum sapiente nesciunt alias temporibus, facere aperiam aut aspernatur sint nemo ut veritatis officiis autem voluptates voluptatibus. In doloremque aliquam pariatur nulla?
-    <div class="em-child">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores et quod, sed sapiente numquam, id, sit esse nemo enim in adipisci nostrum quae dolorum maxime inventore eaque blanditiis. Pariatur, adipisci!
-    </div>
+        <section class="em-child">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores et quod, sed sapiente numquam, id, sit esse nemo enim in adipisci nostrum quae dolorum maxime inventore eaque blanditiis. Pariatur, adipisci!
+        </section>
     </div>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus distinctio aliquam maiores, itaque ipsa quo obcaecati excepturi, voluptas officia laborum dicta, laudantium libero ducimus minus magnam sed pariatur! Laborum?
+    </div>
+
+    <a href="units.html#temario-css">☝️</a>
+    <hr>
+
+    <h2 id="rems">Rems (Root-em)</h2>
+    <div class="rem">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum sapiente nesciunt alias temporibus, facere aperiam aut aspernatur sint nemo ut veritatis officiis autem voluptates voluptatibus. In doloremque aliquam pariatur nulla?
+        <section class="rem-child">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores et quod, sed sapiente numquam, id, sit esse nemo enim in adipisci nostrum quae dolorum maxime inventore eaque blanditiis. Pariatur, adipisci!
+        </section>
     </div>
 
     <a href="units.html#temario-css">☝️</a>
