--- a/video-css-3/units.html
+++ b/video-css-3/units.html
@@ -12,8 +12,9 @@
     <h2 id="temario-css">Temario del curso</h2>
     <ul>
         <li><a href="units.html#pixels">Pixeles</a></li>
-        <li><a href="units.html#ems">Ems</a></li>
-        <li><a href="units.html#rems">Rems</a></li>
+        <li><a href="units.html#ems">EMs</a></li>
+        <li><a href="units.html#rems">REMs</a></li>
+        <li><a href="units.html#exs">EXs</a></li>
     </ul>
     
     <h2 id="pixels">Pixeles</h2>
@@ -24,7 +25,7 @@
     <a href="units.html#temario-css">☝️</a>
     <hr>
 
-    <h2 id="ems">Ems</h2>
+    <h2 id="ems">EMs</h2>
     <div class="ems">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum sapiente nesciunt alias temporibus, facere aperiam aut aspernatur sint nemo ut veritatis officiis autem voluptates voluptatibus. In doloremque aliquam pariatur nulla?
         <section class="em-child">
@@ -38,7 +39,7 @@
     <a href="units.html#temario-css">☝️</a>
     <hr>
 
-    <h2 id="rems">Rems (Root-em)</h2>
+    <h2 id="rems">REMs (Root-em)</h2>
     <div class="rem">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum sapiente nesciunt alias temporibus, facere aperiam aut aspernatur sint nemo ut veritatis officiis autem voluptates voluptatibus. In doloremque aliquam pariatur nulla?
         <section class="rem-child">
@@ -48,6 +49,21 @@
 
     <a href="units.html#temario-css">☝️</a>
     <hr>
+
+    <h2 id="exs">EXs</h2>
+    <div class="ex">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum sapiente nesciunt alias temporibus, facere aperiam aut aspernatur sint nemo ut veritatis officiis autem voluptates voluptatibus. In doloremque aliquam pariatur nulla?
+        <section class="ex-child">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores et quod, sed sapiente numquam, id, sit esse nemo enim in adipisci nostrum quae dolorum maxime inventore eaque blanditiis. Pariatur, adipisci!
+        </section>
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus distinctio aliquam maiores, itaque ipsa quo obcaecati excepturi, voluptas officia laborum dicta, laudantium libero ducimus minus magnam sed pariatur! Laborum?
+    </div>
+
+    <a href="units.html#temario-css">☝️</a>
+    <hr>
+
     <br>
 </body>
 </html>
