--- a/video-css-3/units.html
+++ b/video-css-3/units.html
@@ -15,6 +15,7 @@
         <li><a href="units.html#ems">EMs</a></li>
         <li><a href="units.html#rems">REMs</a></li>
         <li><a href="units.html#exs">EXs</a></li>
+        <li><a href="units.html#chs">CHs</a></li>
     </ul>
     
     <h2 id="pixels">Pixeles</h2>
@@ -59,6 +60,20 @@
     </div>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate doloribus distinctio aliquam maiores, itaque ipsa quo obcaecati excepturi, voluptas officia laborum dicta, laudantium libero ducimus minus magnam sed pariatur! Laborum?
+    </div>
+
+    <a href="units.html#temario-css">☝️</a>
+    <hr>
+
+    <h2 id="chs">CHs</h2>
+    <div class="chs">
+        1234567890
+    </div>
+    <div class="chs">
+        qwertyuiop
+    </div>
+    <div class="chs">
+        15dsfrv2f.,m
     </div>
 
     <a href="units.html#temario-css">☝️</a>
