--- a/video-css-3/units.html
+++ b/video-css-3/units.html
@@ -16,6 +16,7 @@
         <li><a href="units.html#rems">REMs</a></li>
         <li><a href="units.html#exs">EXs</a></li>
         <li><a href="units.html#chs">CHs</a></li>
+        <li><a href="units.html#porcentajes">Porcentajes</a></li>
     </ul>
     
     <h2 id="pixels">Pixeles</h2>
@@ -79,6 +80,22 @@
     <a href="units.html#temario-css">☝️</a>
     <hr>
 
+    <h2 id="porcentajes">Porcentajes (%)</h2>
+    <div class="porcentages">
+        Caja de bloque
+    </div>
+    <div class="height-parent">
+        <section class="height-child">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nam, reiciendis officiis amet consequatur, illum necessitatibus non earum at ipsa quia, id quaerat soluta ratione! Voluptates dicta fugit doloribus nisi.
+        </section>
+    </div>
+   <!--  <span class="porcentages">
+        Caja de linea
+    </span> -->
+    <br>
+
+    <a href="units.html#temario-css">☝️</a>
+    <hr>
     <br>
 </body>
 </html>
