--- a/video-css-3/variables-functions.html
+++ b/video-css-3/variables-functions.html
@@ -12,7 +12,7 @@
     <h2 id="temario-css">Temario del curso</h2>
     <ul>
         <li><a href="variables-functions.html#custom-props">Custom Properties</a></li>
-        <li><a href="variables-functions.html#"></a></li>
+        <li><a href="variables-functions.html#funciones">Funciones en CSS</a></li>
     </ul>
     
     <h2 class="title-props" id="custom-props">Custom Properties(Variables css)</h2>
@@ -25,6 +25,19 @@
             </section>
         </article>
     <br>
+    <a href="variables-functions.html#temario-css">☝️</a>
+    <hr>
+
+    <h2 id="funciones">Funciones en CSS</h2>
+    <ul>
+        <li>var()</li>
+        <li>url()</li>
+        <li>calc()</li>
+        <li></li>
+    </ul>
+    <div class="ch-10">
+        1234567890
+    </div>
 
     <a href="variables-functions.html#temario-css">☝️</a>
     <hr>
