funciones min-max & clamp

--- a/video-css-3/variables-functions.html
+++ b/video-css-3/variables-functions.html
@@ -33,12 +33,16 @@
         <li>var()</li>
         <li>url()</li>
         <li>calc()</li>
-        <li></li>
+        <li>min() & max()</li>
+        <li>clamp()</li><!-- recibe el tamaño min, el tamaño ideal y el tamaño máximo -->
     </ul>
     <div class="ch-10">
         1234567890
     </div>
-
+    <div class="min-max">
+        Funciones min() & max()
+    </div>
+    <!-- Clamp - aplicado en el h1 -->
     <a href="variables-functions.html#temario-css">☝️</a>
     <hr>
 
