fuentes externas-woff

--- a/video-css-3/fonts-texts.html
+++ b/video-css-3/fonts-texts.html
@@ -18,7 +18,13 @@
         <p class="font">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia porro id voluptatibus doloribus reprehenderit repellendus dignissimos eveniet ducimus at laboriosam, numquam autem ullam aperiam expedita ipsam. Fugit inventore vitae deleniti.
         </p>
-
+        <p class="chalet">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit qui fuga minus. Dicta vero sint pariatur. Dolor nulla temporibus cupiditate est, hic voluptates voluptas odio explicabo dolores quos assumenda in!
+        </p>
+        <p class="pecita">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quidem cupiditate qui harum laborum! Eos eveniet fugiat perspiciatis architecto blanditiis reprehenderit, molestiae quod neque totam maxime? Incidunt, iste? Provident, aperiam.
+        </p>
+        
         <a href="fonts-texts.html#temario-css">☝️</a>
         <hr>
 </body>
