--- a/video-css-3/fonts-texts.html
+++ b/video-css-3/fonts-texts.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilos de fuentes y textos</title>
+    <!-- google fonts, antes de la hoja de estilos, buena practica traer el link y no import -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts-texts.css">
 </head>
 <body>
@@ -23,6 +27,9 @@
         </p>
         <p class="pecita">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quidem cupiditate qui harum laborum! Eos eveniet fugiat perspiciatis architecto blanditiis reprehenderit, molestiae quod neque totam maxime? Incidunt, iste? Provident, aperiam.
+        </p>
+        <p class="raleway">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, totam. Aut perferendis quibusdam sequi quidem expedita unde provident nobis delectus dolores, nulla vitae ad quisquam, quis nostrum perspiciatis soluta rerum?
         </p>
         
         <a href="fonts-texts.html#temario-css">☝️</a>
