--- a/video-css-3/fonts-texts.html
+++ b/video-css-3/fonts-texts.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <!-- material icons - esta es una manera de traerme los icons, y pego la configuración para el css también-->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <!-- icons de react a traves de cdn, es una infraestructura que nos permite alojar la libreria, sin descargarla-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- font-awesome con cdnjs, asi no es necesario registrarnos (no borrar sus propiedades)-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- style -->
     <link rel="stylesheet" href="css/fonts-texts.css">
 </head>
 <body>
@@ -15,7 +22,8 @@
         <h2 id="temario-css">Temario del curso</h2>
     <ul>
         <li><a href="fonts-texts.html#font">Estilos de fuentes tipográficas</a></li>
-        
+        <li><a href="fonts-texts.html#styles-texts">Estilos de textos</a></li>
+        <li><a href="fonts-texts.html#icons">Tipografias de iconos vectoriales</a></li>
     </ul>
 
     <h2 id="font">Estilos de fuentes tipográficas</h2>
@@ -31,6 +39,7 @@
         <p class="raleway">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, totam. Aut perferendis quibusdam sequi quidem expedita unde provident nobis delectus dolores, nulla vitae ad quisquam, quis nostrum perspiciatis soluta rerum?
         </p>
+    <h2 id="styles-texts">Estilos de textos</h2>
         <p class="text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dignissimos eius maxime ratione tempora ipsam vitae, ipsum a enim quidem nam distinctio itaque accusamus aperiam voluptate pariatur, eaque vero dolor?
             <a href="http://">Enlace</a>
@@ -54,7 +63,41 @@
         <p class="word-spacing">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, eius aliquid. Est eligendi ut doloribus magni ducimus! Officia, qui? Magni, quia modi dolor ratione voluptas nam. Sunt sint animi repellat!
         </p>
-        
+
+        <a href="fonts-texts.html#temario-css">☝️</a>
+        <hr>
+
+        <h2 id="icons">Tipografias de iconos vectoriales</h2>
+        <h3>Material Icons</h3>
+        <div>
+            <span class="material-symbols-outlined material-icons-outlined"><!-- outlined, seria el estilo del icono -->
+                info
+            </span>
+            <span class="material-symbols-outlined material-icons-outlined"><!-- escribir el nombre que tiene -->
+                done
+            </span>
+            <span class="material-symbols-outlined material-icons-outlined">
+                favorite
+            </span>
+        </div>
+        <h3>Boostrap Icons</h3>
+        <div>
+            <i class="bi bi-airplane-fill"></i>
+            <i class="bi bi-arrow-through-heart"></i>
+            <i class="bi bi-badge-ar"></i>
+        </div>
+        <h3>Font Awesome</h3>
+        <div>
+            <i class="fa-solid fa-leaf"></i>
+            <i class="fa-solid fa-code"></i>
+            <i class="fa-solid fa-scissors"></i>
+        </div>
+        <br>
+
+        <a href="fonts-texts.html#temario-css">☝️</a>
+        <hr>
+
+
         <a href="fonts-texts.html#temario-css">☝️</a>
         <hr>
 </body>
