--- a/video-css-3/border-outline.html
+++ b/video-css-3/border-outline.html
@@ -7,13 +7,24 @@
     <link rel="stylesheet" href="css/border-outline.css">
 </head>
 <body>
+
     <h1>Bordes u outlines</h1>
+    <h2>Bordes redondeados</h2>
     <div class="box border-radius"></div>
     <div class="box border-radius-2"></div>
     <div class="box border-radius-3"></div>
     <div class="box border-radius-4"></div>
 
+    <h2>Outlines</h2>
+    <div class="box outline">Outline</div>
+    <div style="text-align: center;">
+        <input type="text"> <!-- el navegador le asigna al input text un outline, una pequeña sombra -->
+        <!-- hov en el inspector puedo ver las propiedades propias del navegador predeterminado -->
+    </div>
+    
+
     <a href="fonts-texts.html#temario-css">☝️</a>
-        <hr>
+    <hr>
+    
 </body>
 </html>
