backgrounds with images

--- a/video-css-3/backgrounds.html
+++ b/video-css-3/backgrounds.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/backgrounds.css">
 </head>
 <body>
-    <h1>Fondos en CSS</h1>
+    <h1 id="fondos">Fondos en CSS</h1>
     
     <div class="box bg-color"></div>
     <div class="box bg-image"></div>
@@ -16,10 +16,12 @@
     <div class="box bg-position"></div>
     <div class="box bg-clip"></div>
     <div class="box bg-origin"></div>
-    <div class="box"></div>
+    <div class="box bg-attachment"></div>
+    <div class="box bg-multiple"></div>
+    <div class="box bg-art"></div>
 
-    <a href="fonts-texts.html#temario-css">☝️</a>
-    <hr>
+    <br>
+    <a href="backgrounds.html#fondos">☝️</a>
     
 </body>
 </html>
