filter of shadows

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -10,9 +10,15 @@
     <h1>Efectos visuales en CSS</h1>
     <hr>
     <h2>Sombras</h2>
-    <div class="box box-shadow">
+    <div class="box shadows">
         <p>Sombras</p>
     </div>
-
+    <div class="box shadows-multiple">
+        <p>Sombras</p>
+    </div>
+    <div class="box drop-shadow">
+        <img src="../video-css-3/assets/arbol.png" alt="Árbol y el niño">
+    </div>
+    
 </body>
 </html>
