--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Efectos visuales en CSS</title>
-    <link rel="stylesheet" href="css/visual,effects.css">
+    <link rel="stylesheet" href="css/visual-effects.css">
 </head>
 <body>
     <h1>Efectos visuales en CSS</h1>
     <hr>
-    <h2>Sombras</h2>
+    <h2 id="temario-curso">Temario del curso</h2>
+    <ul>
+        <li><a href="visual-effects.html#shadows">Sombras</a></li>
+        <li><a href="visual-effects.html#gradient">Gradientes</a></li>
+    </ul>
+    <br>
+
+    <h3 id="shadows">Sombras</h3>
     <div class="box shadows">
         <p>Sombras</p>
     </div>
@@ -19,6 +26,22 @@
     <div class="box drop-shadow">
         <img src="../video-css-3/assets/arbol.png" alt="Árbol y el niño">
     </div>
+
+    <br>
+    <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr>
     
+    <h2 id="gradient">Degradados</h2>
+    <h3>Lineales</h3>
+    <div class="box linear-gradient"></div>
+    <h3>Radial</h3>
+    <div class="box radial-gradient"></div>
+    <h3>Cónico</h3>
+    <div class="box conic-gradient"></div>
+
+    <br>
+    <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr>
+
 </body>
 </html>
