--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -39,6 +39,11 @@
     <h3>Cónico</h3>
     <div class="box conic-gradient"></div>
 
+    <h3>Repetir degradados</h3>
+    <div class="box repeat-gradient-linear"></div>
+    <div class="box repeat-gradient-radial"></div>
+    <div class="box repeat-gradient-conic"></div>
+
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
