graficas con degradados

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -44,6 +44,10 @@
     <div class="box repeat-gradient-radial"></div>
     <div class="box repeat-gradient-conic"></div>
 
+    <h3>Gráficos con degradados</h3>
+    <div class="box chart-gradient"></div>
+    <div class="box donut-gradient"></div>
+
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
