--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="visual-effects.html#shadows">Sombras</a></li>
         <li><a href="visual-effects.html#gradient">Gradientes</a></li>
+        <li><a href="visual-effects.html#filtro">Filtros</a></li>
     </ul>
     <br>
 
@@ -47,6 +48,15 @@
     <h3>Gráficos con degradados</h3>
     <div class="box chart-gradient"></div>
     <div class="box donut-gradient"></div>
+
+    <br>
+    <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr>
+
+    <h2 id="filtro">Filtros</h2>
+    <article class="card">
+        <img src="../img/start.png" alt="♥">
+    </article>
 
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
