--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -55,12 +55,17 @@
 
     <h2 id="filtro">Filtros</h2>
     <article class="card">
-        <img src="../img/start.png" alt="♥">
+        <img class="filter" src="../img/start.png" alt="♥">
+    </article>
+    <h3>Filtros múltiples</h3>
+    <article class="card">
+        <img class="filters-multiple" src="../img/start.png" alt="♥">
     </article>
 
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
 
+    
 </body>
 </html>
