filter-multiples-fondos

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -61,6 +61,20 @@
     <article class="card">
         <img class="filters-multiple" src="../img/start.png" alt="♥">
     </article>
+    <h3>Filtros a fondos</h3>
+    <article class="card relative">
+        <img src="../img/start.png" alt="♥">
+        <div class="backdrop-filter">
+            <h4>NamDo Sam♥</h4>
+        </div>
+    </article>
+    <h3>Filtros multiples a fondos</h3>
+    <article class="card relative">
+        <img src="../img/start.png" alt="♥">
+        <div class="backdrop-filter-multiple">
+            <h4>NamDo Sam♥</h4>
+        </div>
+    </article>
 
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
