--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<!-- a la etiqueta html o body se le puede aplicar esto -->
+<html lang="es" class="dark-mode">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,6 +75,13 @@
         <div class="backdrop-filter-multiple">
             <h4>NamDo Sam♥</h4>
         </div>
+    </article>
+    <h3>Modo dark/light con filtros</h3>
+    <article class="card">
+        <img src="../img/start.png" alt="♥">
+    </article>
+    <article class="card">
+        <img src="../img/winter.jpg" alt="Winter">
     </article>
 
     <br>
