modos de mezcla-img

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- a la etiqueta html o body se le puede aplicar esto -->
-<html lang="es" class="dark-mode">
+<html lang="es"><!-- class="dark-mode" -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +15,7 @@
         <li><a href="visual-effects.html#shadows">Sombras</a></li>
         <li><a href="visual-effects.html#gradient">Gradientes</a></li>
         <li><a href="visual-effects.html#filtro">Filtros</a></li>
+        <li><a href="visual-effects.html#mezcla">Modos de mezcla</a></li>
     </ul>
     <br>
 
@@ -83,7 +84,15 @@
     <article class="card">
         <img src="../img/winter.jpg" alt="Winter">
     </article>
+    <br>
+   <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr> 
 
+    <h2 id="mezcla">Modos de mezcla</h2>
+    <article class="card relative bland-modes">
+        <img src="../img/winter.jpg" alt="Winter">
+        <img class="absolute" src="../img/start.png" alt="♥">
+    </article>
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
