modos de mezcla en fondos

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -89,10 +89,14 @@
     <hr> 
 
     <h2 id="mezcla">Modos de mezcla</h2>
+    <h3>Sobre imágenes (img)</h3>
     <article class="card relative bland-modes">
         <img src="../img/winter.jpg" alt="Winter">
         <img class="absolute" src="../img/start.png" alt="♥">
     </article>
+    <h3>Sobre imágenes de fondo (background-image)</h3>
+    <article class="card bg-blend-modes"></article>
+    
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
