--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -16,6 +16,7 @@
         <li><a href="visual-effects.html#gradient">Gradientes</a></li>
         <li><a href="visual-effects.html#filtro">Filtros</a></li>
         <li><a href="visual-effects.html#mezcla">Modos de mezcla</a></li>
+        <li><a href="visual-effects.html#mascaras">Máscaras</a></li>
     </ul>
     <br>
 
@@ -96,7 +97,14 @@
     </article>
     <h3>Sobre imágenes de fondo (background-image)</h3>
     <article class="card bg-blend-modes"></article>
-    
+    <br>
+    <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr>
+
+    <h2 id="mascaras">Máscaras</h2>
+    <article class="card clip-path">
+        <img src="../img/start.png" alt="♥">
+    </article>
     <br>
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
