formas shipe-outside

--- a/video-css-4/visual-effects.html
+++ b/video-css-4/visual-effects.html
@@ -17,6 +17,7 @@
         <li><a href="visual-effects.html#filtro">Filtros</a></li>
         <li><a href="visual-effects.html#mezcla">Modos de mezcla</a></li>
         <li><a href="visual-effects.html#mascaras">Máscaras</a></li>
+        <li><a href="visual-effects.html#formas">Formas</a></li>
     </ul>
     <br>
 
@@ -109,6 +110,52 @@
     <a href="visual-effects.html#temario-curso">☝️</a>
     <hr>
 
+    <h2 id="formas">Formas</h2>
+    <article class="shapes">
+        <h3>Ejemplos de formas y siluetas entre texto e imágenes</h3>
+        <img src="../img/program.png" alt="Programing" class="float-left shape-1">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, consectetur repellendus minima sunt eveniet autem error excepturi et reiciendis, atque nihil quas voluptatum libero ea! Quam laboriosam quo illum facilis!
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora tenetur ad ex vitae eaque eius beatae, laborum quos odit id reprehenderit, inventore magnam est consequuntur quam quia sint qui accusamus!
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam voluptate expedita sunt harum, sed autem labore aperiam doloribus qui laborum adipisci consequatur, distinctio sint, temporibus rem non? Sapiente, exercitationem libero.
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum tempore aliquam culpa, veniam quod quidem blanditiis sed earum natus in fugit voluptatum dolorum accusamus enim omnis asperiores tempora rem saepe.
+        </p>
+        <img src="../img/program.png" alt="Programing" class="float-right shape-2">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, consectetur repellendus minima sunt eveniet autem error excepturi et reiciendis, atque nihil quas voluptatum libero ea! Quam laboriosam quo illum facilis!
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora tenetur ad ex vitae eaque eius beatae, laborum quos odit id reprehenderit, inventore magnam est consequuntur quam quia sint qui accusamus!
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam voluptate expedita sunt harum, sed autem labore aperiam doloribus qui laborum adipisci consequatur, distinctio sint, temporibus rem non? Sapiente, exercitationem libero.
+        </p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum tempore aliquam culpa, veniam quod quidem blanditiis sed earum natus in fugit voluptatum dolorum accusamus enim omnis asperiores tempora rem saepe.
+        </p>
+        <img src="../img/program.png" alt="Programing" class="float-left shape-3">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ea iusto pariatur beatae, vitae veniam a cumque voluptates laudantium dolor nihil ipsa! Ut quibusdam corrupti iure odio minus vitae id!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eveniet ea suscipit, omnis voluptatum labore officiis tenetur rem ut neque explicabo, dolore inventore laudantium, accusamus assumenda voluptate quos at magnam?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quas consequatur quod dolorum expedita voluptates nulla, nemo itaque harum deleniti quae sequi nisi voluptatibus ullam commodi architecto ad voluptate ratione?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae temporibus officiis velit qui facilis veniam enim animi laudantium numquam quasi dicta, repudiandae ipsum explicabo voluptatibus tempora harum non aspernatur magnam.
+        </p>
+    </article>
+    <br>
+    <a href="visual-effects.html#temario-curso">☝️</a>
+    <hr>
     
 </body>
 </html>
