carousel horizontal-diapositivas

--- a/video-css-4/scroll-snap-slides.html
+++ b/video-css-4/scroll-snap-slides.html
@@ -12,8 +12,37 @@
         <section class="slide">
             <article class="slide-container">
                 <h1>Ajustes del Scroll <small>(Slides)</small></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vitae fugiat rem corrupti. Sed ullam beatae libero delectus fuga omnis minima eaque, sapiente, repellat esse nisi quae necessitatibus provident soluta?</p>
-            </article>
+                <section class="carousel">
+                    <div class="carousel-container">
+                        <article class="carousel-slide">
+                            <div class="carousel-slide-content">
+                                <h3>Slide 1</h3>
+                            </div>
+                        </article>
+                        <article class="carousel-slide">
+                            <div class="carousel-slide-content">
+                                <h3>Slide 2</h3>
+                            </div>
+                        </article>
+                        <article class="carousel-slide">
+                            <div class="carousel-slide-content">
+                                <h3>Slide 3</h3>
+                            </div>
+                        </article>
+                        <article class="carousel-slide">
+                            <div class="carousel-slide-content">
+                                <h3>Slide 4</h3>
+                            </div>
+                        </article>
+                        <article class="carousel-slide">
+                            <div class="carousel-slide-content">
+                                <h3>Slide 5</h3>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero vitae fugiat rem corrupti. Sed ullam beatae libero delectus fuga omnis minima eaque, sapiente, repellat esse nisi quae necessitatibus provident soluta?</p>-->
+            </article> 
         </section>
         <section class="slide">
             <article class="slide-container">
@@ -40,6 +69,5 @@
             </article>
         </section>
     </main>
-
 </body>
 </html>
