--- a/video-css-4/scroll-snap-slides.html
+++ b/video-css-4/scroll-snap-slides.html
@@ -11,7 +11,7 @@
     <main class="slides">
         <section class="slide">
             <article class="slide-container">
-                <h1>Ajustes del Scroll <small>(Slides)</small></h1>
+                <h1 class="gradient-text">Ajustes del Scroll <small>(Slides)</small></h1>
                 <section class="carousel">
                     <div class="carousel-container">
                         <article class="carousel-slide">
