--- a/video-css-4/motion.html
+++ b/video-css-4/motion.html
@@ -8,21 +8,34 @@
 </head>
 <body>
     <h1>Movimiento en CSS</h1>
+
+    <h3 id="temario-curso">Temario del curso</h3>
+    <ul>
+        <li><a href="motion.html#transitions">Transiciones</a></li>
+        <li><a href="motion.html#transformaciones">Transformaciones</a></li>
+        <li><a href="motion.html#animations">Animaciones</a></li>
+    </ul>
     <hr>
-    <section class="transitions">
+    <section id="transitions" class="transitions">
         <h2>Transiciones</h2>
         <div class="box"></div>
         <article class="card">
             <img src="../img/nam.png" alt="♥">
         </article>
     </section>
-    <hr>
-
-    <h2>Transformaciones</h2>
-    <hr>
-    <h2>Animaciones</h2>
     <br>
     <a href="motion.html#temario-curso">☝️</a>
     <hr>
+
+    <h2 id="transformaciones">Transformaciones</h2>
+    <br>
+    <a href="motion.html#temario-curso">☝️</a>
+    <hr>
+
+    <h2 id="animations">Animaciones</h2>
+    <br>
+    <a href="motion.html#temario-curso">☝️</a>
+    <hr>
+
 </body>
 </html>
