--- a/video-css-4/motion.html
+++ b/video-css-4/motion.html
@@ -37,6 +37,10 @@
         <article class="card transform-3d">
             <img src="../img/nam.png" alt="♥">
         </article>
+        <h3>Origen de la transformación</h3>
+        <article class="card transform-origin">
+            <img src="../img/nam.png" alt="♥">
+        </article>
     </section>
     
     <br>
