flip-card con transiciones y animaciones

--- a/video-css-4/motion.html
+++ b/video-css-4/motion.html
@@ -41,6 +41,23 @@
         <article class="card transform-origin">
             <img src="../img/nam.png" alt="♥">
         </article>
+        <h3>Flip Cards</h3>
+        <article class="flip-card-1">
+            <div class="flip-face flip-front">
+                <img src="/img/nam.png" alt="">
+            </div>
+            <div class="flip-face flip-back">
+                <img src="/img/start.png" alt="">
+            </div>
+        </article>
+        <article class="flip-card-2">
+            <div class="flip-face flip-front">
+                <img src="/img/nam.png" alt="">
+            </div>
+            <div class="flip-face flip-back">
+                <img src="/img/start.png" alt="">
+            </div>
+        </article>
     </section>
     
     <br>
@@ -51,6 +68,6 @@
     <br>
     <a href="motion.html#temario-curso">☝️</a>
     <hr>
-
+6.24.36
 </body>
 </html>
